[tool.poetry]
name = "qhack2023"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pennylane = "^0.28.0"
ipykernel = "^6.21.2"
matplotlib = "^3.7.0"
dask = {extras = ["delayed"], version = "^2023.2.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
